@@ -36,7 +36,7 @@ get.diameter <- function(graph, directed=TRUE, unconnected=TRUE) {
         PACKAGE="igraph")
 }
 
-farthest.points <- function(graph, directed=TRUE, unconnected=TRUE) {
+farthest.nodes <- function(graph, directed=TRUE, unconnected=TRUE) {
   .Call("R_igraph_farthest_points", graph, as.logical(directed),
         as.logical(unconnected),
         PACKAGE="igraph")
@@ -102,19 +102,15 @@ get.shortest.paths <- function(graph, from, to=igraph.vs.all(graph),
 }
 
 get.all.shortest.paths <- function(graph, from,
-                                   to=NULL,
+                                   to=igraph.vs.all(graph),
                                    mode="all") {
   if (is.character(mode)) {
     mode <- switch(mode, "out"=1, "in"=2, "all"=3)
   }
 
-  res <- .Call("R_igraph_get_all_shortest_paths", graph,
-               as.numeric(from), as.numeric(mode),
-               PACKAGE="igraph")
-  if (!is.null(to)) {
-    res <- res[ sapply(res, function(x) tail(x,1) %in% to) ]
-  }
-  res
+  .Call("R_igraph_get_all_shortest_paths", graph,
+        as.numeric(from), as.igraph.vs(graph, to), as.numeric(mode),
+        PACKAGE="igraph")
 }
 
 subcomponent <- function(graph, v, mode="all") {
